[tool.poetry]
name = "Authentication"
version = "0.1.0"
description = "Authentication package"
authors = ["Prabal Pathak <prabal01pathak@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.2"}
pydantic = {extras = ["email"], version = "^2.6.3"}
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pylint = "^2.15.5"
requests = "^2.28.1"
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
