[tool.poetry]
name = "Authentication"
version = "0.1.0"
description = "Authentication package"
authors = ["Prabal Pathak <prabal01pathak@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^1.10.2"}
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.1.3"
pylint = "^2.15.5"
requests = "^2.28.1"
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
